--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes</title>
+    <meta
+      name="description"
+      content="Contact us for freshly baked croissants"
+    />
+
+    <title>Contact us - Croissant.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,15 +25,17 @@
   </head>
   <body>
     <h1>Contact me</h1>
-    <div class="buttons">
-      <div class="row">
-        <div class="col">
-          <a href="/index.html">Home</a>
-        </div>
-        <div class="col">
-          <a href="/photo.html">Photo</a>
-        </div>
-      </div>
-    </div>
+    <p>
+      To contact croissant.com, please email us at
+      <a href="mailto:hello@croissant.com" title="contact us by email"
+        >hello@croissant.com</a
+      >
+      for more info
+    </p>
+    <footer>
+      <a href="/"> Homepage</a>
+      <a href="/photo.html"> Photo</a>
+      <a href="/contact.html"> Contact</a>
+    </footer>
   </body>
 </html>
