--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes</title>
+    <meta name="description" content="Best croissants on the internet" />
+
+    <title>The best croissants on the internet - Croissant.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,15 +23,10 @@
   <body>
     <h1>Welcome to my website</h1>
 
-    <div class="buttons">
-      <div class="row">
-        <div class="col">
-          <a href="/contact.html">Contact</a>
-        </div>
-        <div class="col">
-          <a href="/photo.html">Photo</a>
-        </div>
-      </div>
-    </div>
+    <footer>
+      <a href="/"> Homepage</a>
+      <a href="/photo.html"> Photo</a>
+      <a href="/contact.html"> Contact</a>
+    </footer>
   </body>
 </html>
