--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes</title>
+    <meta name="description" content="Photo of a freshly baked crossiant" />
+    <title>A photo of a Croissant - Croissant.com</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,17 +20,17 @@
     <link href="src/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <img src="/images/yogurt.png" class="img-fluid p-r shadow rounded" />
+    <h1>Photo of a Croissant</h1>
+    <img
+      src="/images/crossiant.jpeg"
+      alt="A photo of a croissant"
+      class="img-fluid rounded"
+    />
 
-    <div class="buttons">
-      <div class="row">
-        <div class="col">
-          <a href="/contact.html">Contact</a>
-        </div>
-        <div class="col">
-          <a href="/index.html">Home</a>
-        </div>
-      </div>
-    </div>
+    <footer>
+      <a href="/"> Homepage</a>
+      <a href="/photo.html"> Photo</a>
+      <a href="/contact.html"> Contact</a>
+    </footer>
   </body>
 </html>
